# klartex

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.en.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
agent-docs/: README.md
agent-docs/github/: info.json  labels.json
agent-docs/main/: index.md
branding/: default.yaml  example.yaml
cls/: klartex-base.cls  klartex-dagordning.sty  klartex-klausuler.sty  klartex-name-roster.sty  klartex-namnrollista.sty  klartex-signaturblock.sty  klartex-titelsida.sty
klartex/: __init__.py  block_engine.py  branding.py  cli.py  components.py  inline_markup.py  main.py  page_templates.py  recipe.py  registry.py  renderer.py  tex_escape.py
klartex/cls/: klartex-agenda.sty  klartex-base.cls  klartex-budgettabell.sty  klartex-callout.sty  klartex-klausuler.sty  klartex-notapparat.sty  klartex-numformat.sty  klartex-resultatrakning.sty  klartex-signaturblock.sty  klartex-signatureblock.sty  klartex-titelsida.sty
klartex/page_templates/: formal.tex.jinja
klartex/schemas/: block_engine.example.json  block_engine.schema.json  recipe.schema.json
klartex/templates/: _block_engine.tex.jinja  _block_macros.tex.jinja  _financial_macros.tex.jinja  (+1 more)
page_templates/: branded.yaml  clean.tex.jinja  clean.yaml  formal.tex.jinja  formal.yaml  none.tex.jinja  none.yaml
schemas/: block_engine.schema.json  recipe.schema.json
templates/: _block_engine.tex.jinja  _branding_preamble.jinja  _header_minimal.jinja  _header_none.jinja  _header_standard.jinja  _recipe_base.tex.jinja
tests/: test_agent_cli.py  test_api.py  test_block_engine.py  test_cli_errors.py  test_cli_page_template.py  test_components.py  test_inline_markup.py  test_page_templates.py  test_recipe.py  test_renderer.py  test_schemas.py  test_tex_escape.py
(+112 files in other folders)
