[project]
name = "klartex"
version = "0.1.0"
description = "PDF generation via LaTeX — structured data in, professional documents out"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "jsonschema>=4.23.0",
    "typer>=0.15.0",
]

[project.scripts]
klartex = "klartex.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
